# ThinkTank

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  command.cpp  command.h  commandchannel.cpp  commandchannel.h  control.cpp  control.h  main.cpp  tests.cpp  util.cpp  util.h  zmq.hpp
StateParser/: gamestate.cpp  gamestate.h  mapstate.cpp  mapstate.h  playerstate.cpp  playerstate.h  positionstate.cpp  positionstate.h  projectilestate.cpp  projectilestate.h  stateparser.cpp  stateparser.h  tankstate.cpp  tankstate.h  terrain.cpp  terrain.h
Strategies/: differential_movement_strategy.cpp  differential_movement_strategy.h  direct_firing_strategy.cpp  direct_firing_strategy.h  firing_strategy.cpp  firing_strategy.h  movement_strategy.cpp  movement_strategy.h  predictive_firing_strategy.cpp  predictive_firing_strategy.h  random_firing_strategy.cpp  random_firing_strategy.h  strategy.h
